k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: samilee
spec:
  replicas: 1
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: deployment-personalsites-samilee
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        workload.user.cattle.io/workloadselector: deployment-personalsites-samilee
    spec:
      containers:
      - image: ajacques/samilee.me
        name: samilee
      dnsPolicy: ClusterFirst
