k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: samilee
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    workload.user.cattle.io/workloadselector: deployment-personalsites-samilee
  type: ClusterIP
